--- a/01site/gavia.html
+++ b/01site/gavia.html
@@ -38,8 +38,24 @@
         .visual{width: 1440px;margin: 0 auto;height: 643px;padding-top:230px}
         .visual>h2{font-size:50px;color:white;}
 
-        /* section  */
-        .section{background: pink;width: 1440px;height: 300px;margin: 0 auto}
+        /* sec_01  */
+        .sec_01{
+            width: 1440px;height: 450px;margin: 0 auto;
+            padding: 120px 0 60px 0;
+        }
+        .sec_01>h2{text-align: center;font-size: 40px;line-height: 40px;color: #333;margin-bottom: 50px;}
+        .sec_01>.content>div{float: left;width: 701px;margin-right: 38px;}
+        .sec_01>.content>div:last-child{margin-right: 0;}
+
+        .sec_01 .conItem>div{float: left}
+        .sec_01 .conItem>div.img{
+            background-color: #f6f6f6;
+            border-radius: 81px;margin-right: 30px;
+        }
+        .sec_01 .conItem>div.textWrap{padding-top: 30px;color: #333;}
+        .sec_01 .conItem>div.textWrap>h3{font-size: 22px;margin-bottom: 20px;}
+        .sec_01 .conItem>div.textWrap>p{font-size: 18px;color: #7c7c7c;}
+        
     </style>
 </head>
 <body>
@@ -59,6 +75,49 @@
             <h2>중소벤처기업진흥공단<br>온라인수출지원사업 </h2>
         </div>
     </div>
-    <section class="section"></section>
+    <section class="sec_01">
+        <h2>해외 마켓 전문가가 <br> 수출을 도와드립니다</h2>
+        <div class="content clearfix">
+
+            <div class="conItem clearfix">
+                <div class="img"><img src="images/logo_amazon.png" alt=""></div>
+                <div class="textWrap">
+                    <h3>아마존 입점</h3>
+                    <p>전 세계 3억명의 아마존 고객을 대상으로<br>
+                    고객사의 온라인 스토어를 오픈 및 운영 대행</p>
+                </div>
+            </div>
+            <div class="conItem clearfix">
+                <div class="img"><img src="images/logo_alibaba.png" alt=""></div>
+                <div class="textWrap">
+                    <h3>알리바바 입점</h3>
+                    <p>글로벌 최대 온라인 B2B 플랫폼 알리바바닷컴의 공식파트너<br>
+                    알리바바 입점 및 운영 대행</p>
+                </div>
+            </div>
+        </div>   
+    </section>
+    <section class="sec_01">
+        <h2>해외 마켓 전문가가 <br> 수출을 도와드립니다</h2>
+        <div class="content clearfix">
+
+            <div class="conItem clearfix">
+                <div class="img"><img src="images/logo_amazon.png" alt=""></div>
+                <div class="textWrap">
+                    <h3>아마존 입점</h3>
+                    <p>전 세계 3억명의 아마존 고객을 대상으로<br>
+                    고객사의 온라인 스토어를 오픈 및 운영 대행</p>
+                </div>
+            </div>
+            <div class="conItem clearfix">
+                <div class="img"><img src="images/logo_alibaba.png" alt=""></div>
+                <div class="textWrap">
+                    <h3>알리바바 입점</h3>
+                    <p>글로벌 최대 온라인 B2B 플랫폼 알리바바닷컴의 공식파트너<br>
+                    알리바바 입점 및 운영 대행</p>
+                </div>
+            </div>
+        </div>   
+    </section>
 </body>
 </html>
