--- a/02himedia/himedia.html
+++ b/02himedia/himedia.html
@@ -7,7 +7,7 @@
     <title>하이미디어</title>
 
     <!-- favicon -->
-    <link rel="stylesheet" href="">
+    <link rel="shortcut icon" href="images/Slice 3.png" type="image/x-icon">
     
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -24,16 +24,33 @@
     <header id="headerWrap">
         <div class="headerTopWrap">
             <div class="headerTop">
-                <nav class="topMenu">
+                <nav class="topMenu clearfix">
                     <ul class="clearfix">
                         <li><a href="">Login</a></li>
                         <li><a href="">Join</a></li>
-                        <li><a href="">Contact</a></li>
+                        <li><a href="">Contact us</a></li>
                         <li><a href="">English</a></li>
                     </ul>
                 </nav>
             </div>
-
+        </div>
+        <h1><a href="">하이미디어</a></h1>
+        <div class="toggle">
+            <div class="bar1"></div>
+            <div class="bar2"></div>
+            <div class="bar3"></div>
+        </div>
+        <div class="mainMenuWrap">
+            <nav class="mainMenu">
+                <ul class="clearfix">
+                    <li><a href="#">회사소개</a></li>
+                    <li><a href="#">제품소개</a></li>
+                    <li><a href="#">사업영역</a></li>
+                    <li><a href="#">고객센터</a></li>
+                    <li><a href="#">사회공헌</a></li>
+                    <li><a href="#">인재채용</a></li>
+                </ul>
+            </nav>            
         </div>
     </header>
 </body>
