--- a/02himedia/himedia.html
+++ b/02himedia/himedia.html
@@ -16,8 +16,8 @@
 
     <!-- style -->
     <link rel="stylesheet" href="css/reset.css">
-    <!-- <link rel="stylesheet" href="css/style.css"> -->
-    <link rel="stylesheet" href="css/m_layout.css">
+    <link rel="stylesheet" href="css/style.css">
+    <!-- <link rel="stylesheet" href="css/m_layout.css"> -->
     
 
 </head>
