--- a/03netmable/index.html
+++ b/03netmable/index.html
@@ -50,21 +50,51 @@
    <div class="visual">
        <ul class="slide1">
            <li>
-               <div class="txtWrap"></div>
+               <div class="txtWrap">
+                   <div class="txt">
+                       <h3></h3>
+                       <p></p>
+                   </div>
+               </div>
                <img src="images/banner01.jpg" alt="">
            </li>
            <li>
-               <img src="/2022web_site/03넷마블문화재단/images/banner02.jpg" alt="">
+               <div class="txtWrap">
+                   <div class="txt">
+                       <h3></h3>
+                       <p></p>
+                   </div>
+               </div>
+               <img src="images/banner02.jpg" alt="">
            </li>
            <li>
-               <img src="/2022web_site/03넷마블문화재단/images/banner03.jpg" alt="">
+               <div class="txtWrap">
+                   <div class="txt">
+                       <h3></h3>
+                       <p></p>
+                   </div>
+               </div>
+               <img src="images/banner03.jpg" alt="">
            </li>
            <li>
-               <img src="/2022web_site/03넷마블문화재단/images/banner04.jpg" alt="">
+               <div class="txtWrap">
+                   <div class="txt">
+                       <h3></h3>
+                       <p></p>
+                   </div>
+               </div>
+               <img src="images/banner04.jpg" alt="">
            </li>
            <li>
-               <img src="/2022web_site/03넷마블문화재단/images/banner05.jpg" alt="">
+               <div class="txtWrap">
+                   <div class="txt">
+                       <h3></h3>
+                       <p></p>
+                   </div>
+               </div>
+               <img src="images/banner05.jpg" alt="">
            </li>
+           
        </ul>
    </div>
 </body>
