--- a/03netmable/index.html
+++ b/03netmable/index.html
@@ -46,9 +46,10 @@
         .sec2 p{font-size: 14px;line-height: 24px;letter-spacing: 1%;padding: 0 18px;}
 
         .sec3{width: 1280px;margin: 0 auto;}
-        .sec3_txt{width: 1114px;padding: 107px 105px;background-color: #FFD44A;}
-        .sec3 h5{font-size: 30px;font-weight: 200;  line-height: 39px;letter-spacing: -8.5%;}
+        .sec3_txt{width: 1114px;padding: 107px 105px;background-color: #FFD44A;position: relative;}
+        .sec3 h5{font-size: 27px;font-weight: 200;  line-height:39px;letter-spacing: -8.5%; margin-bottom: 30px;}
         .sec3 span{font-weight:bold}
+        .sec3 img{position: absolute;top: 100px;left: 626px;}
 
 
 
@@ -148,13 +149,13 @@
            </li>
        </ul>
     </div>
-    
+
     <div class="sec3">
         <div class="sec3_txt">
             <h5>우리는 <span>문화적 가치를 확산</span>하여 우리 사회의<br>미래 경쟁력을 높여갑니다</h5>
             <p>주요목적</p>
+            <img src="./images/secimg04.jpg" alt="">
         </div>
-        <img src="./images/secimg04.jpg" alt="">
     </div>
 </body>
 </html>
