--- a/03netmable/index.html
+++ b/03netmable/index.html
@@ -22,7 +22,7 @@
         .menu h1{float: left; padding: 20px 0 0 32px;}
         
 
-        body{background-color: gray;font-family: 'Noto Sans KR', sans-serif;}
+        body{font-family: 'Noto Sans KR', sans-serif;}
 
         .visual{width: 1920px; margin: 0 auto;}
         .visual .txtWrap{width: 1200px; margin: 0 auto; position: relative;}
@@ -32,6 +32,14 @@
         
         .bx-wrapper {box-shadow: none;border: none;}
         .bx-wrapper .bx-pager.bx-default-pager a {margin: 50px 5px;}
+        .bx-wrapper {
+         position: relative;
+         margin-bottom: 0px;
+         padding: 0;
+         *zoom: 1;
+         -ms-touch-action: pan-y;
+         touch-action: pan-y;
+        }
 
         .sec1{width: 1280px;height: 480px;background-color: skyblue;margin: 0 auto;padding: 0 32px;}
         .sec1 h3{font-size: 43px;font-weight: bold;line-height: 62px;letter-spacing: -3%;padding-top: 168px;}
@@ -45,12 +53,25 @@
         .sec2 h4{font-size: 20px;font-weight: bold;line-height: 28px;padding: 15px 18px;}
         .sec2 p{font-size: 14px;line-height: 24px;letter-spacing: 1%;padding: 0 18px;}
 
-        .sec3{width: 1280px;margin: 0 auto;}
-        .sec3_txt{width: 1114px;padding: 107px 105px;background-color: #FFD44A;position: relative;}
-        .sec3 h5{font-size: 27px;font-weight: 200;  line-height:39px;letter-spacing: -8.5%; margin-bottom: 30px;}
+        .sec3{width: 1280px;margin: 0 auto;padding: 0 32px;position: relative;margin-bottom: 284px;}
+        .sec3_txt{width: 1114px;padding: 107px 105px;background-color: #FFD44A;}
+        .sec3 h5{font-size: 30px;font-weight: 200;  line-height:39px;letter-spacing: -2.5px; margin-bottom: 30px;}
         .sec3 span{font-weight:bold}
-        .sec3 img{position: absolute;top: 100px;left: 626px;}
+        .sec3 img{position: absolute;top: 100px;right: 32px;}
 
+        .sec4Wrap{width: 1920px;margin: 0 auto; background-color: #F7F8F9;}
+        .sec4{width: 1280px;height: 965px;margin: 0 auto; padding: 160px 32px;border-color: blue;}
+        .sec4_txt1{width: 1216px;height: 82px;position: relative;margin-bottom: 28px;}
+        .sec4 p{font-size: 44px;font-weight: 700;line-height: 62px;letter-spacing: -2px;}
+        .sec4 p::after{content: "";position: absolute;bottom: 0;left: 0; width: 70px;height: 5px;background-color: #ffd44a;}
+
+        .button{position: absolute;top: 60;right: 0;}
+        .button>button{height: 38px;margin-left: 8px;border-radius: 19px;padding: 0 24px;letter-spacing: -3px;font-weight: 500;line-height: 38px;}
+
+        .sec4_txt2{width: 1216px;height: 530px;background-color: aquamarine;padding: 32px 0;}
+        .sec4 .notice{width: 1216px;height: 466px; background-color: skyblue;}
+        .sec4 ul{width: 1216px;}
+        .sec4 li{float: left;width: 360px;height: 466px; margin-right: 32px;background-color:white;}
 
 
     </style>
@@ -149,13 +170,49 @@
            </li>
        </ul>
     </div>
-
     <div class="sec3">
         <div class="sec3_txt">
             <h5>우리는 <span>문화적 가치를 확산</span>하여 우리 사회의<br>미래 경쟁력을 높여갑니다</h5>
             <p>주요목적</p>
             <img src="./images/secimg04.jpg" alt="">
         </div>
+    </div>
+    <div class="sec4Wrap">
+        <div class="sec4">
+            <div class="sec4_txt1">
+                <p>재단소식</p>
+                <div class="button">
+                    <button>공지사항</button>
+                    <button>뉴스룸</button>
+                    <button>소셜미디어</button>
+                </div>
+            </div>
+            <div class="sec4_txt2">
+                <div class="notice">
+                    <ul class="clearfix">
+                        <li>
+                            <div class="box">
+                                <h5>2022</h5>
+                                <p>12346</p>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="box">
+                                <h5>2022</h5>
+                                <p>12346</p>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="box">
+                                <h5>2022</h5>
+                                <p>12346</p>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
     </div>
 </body>
 </html>
