--- a/03netmable/index.html
+++ b/03netmable/index.html
@@ -66,7 +66,7 @@
         .sec4 p::after{content: "";position: absolute;bottom: 0;left: 0; width: 70px;height: 5px;background-color: #ffd44a;}
 
         .button{position: absolute;top: 60;right: 0;}
-        .button>button{height: 38px;margin-left: 8px;border-radius: 19px;padding: 0 24px;letter-spacing: -3px;font-weight: 500;line-height: 38px;}
+        .button>button{height: 38px;margin-left: 8px;border-radius: 19px;padding: 0 24px;letter-spacing: -3px;font-weight: 500;line-height: 38px;background-color:#f0f1f2;border: 0;}
 
         .sec4_txt2{width: 1216px;height: 530px;background-color: aquamarine;padding: 32px 0;}
         .sec4 .notice{width: 1216px;height: 466px; background-color: skyblue;}
