--- a/04college/index.html
+++ b/04college/index.html
@@ -26,7 +26,10 @@
                 <nav class="navbarMenu2 clearfix">
                     <ul class="clearfix">
                         <li><a href="">글자크기</a></li>
-                        <li><p>-</p><p>+</p></li>
+                        <li>
+                            <p><a href="">-</a></p>
+                            <p><a href="">+</a></p>
+                        </li>
                         <li><a href="">찾아오시는길</a></li>
                         <li><a href="">ENGLISH</a></li>
                         <li><a href="">사이트맵</a></li>
@@ -70,21 +73,40 @@
                 <ul class="clearfix">
                     <li>
                         <h3><span>고려</span>에서<br><span>시작</span>하는<br>새로운 <span>꿈</span></h3>
-                        <a href=""><button class="bt01">자세히보기 ></button></a>
+                        <button class="bt01"><a href="">자세히보기 ></a></button>
                     </li>
                     <li>
                         <div class="Txt01">
                             <h4><span>APP</span>으로<br><span>스마트 도서관</span><br>바로이용하자!</h4>
                             <p>모바일 열람증은<br>도서관 자료실 / 도서대출 등에<br>사용 할 수 있습니다.</p>
-                            <a href=""><button class="bt02">자세히보기 ></button></a>
+                            <button class="bt02"><a href="">자세히보기 ></a></button>
                         </div>
                     </li>
                     <li>
                         <div class="Txt02">
-                            HOTLINK
+                            <p>HOTLINK</p>
+                            <div class="subIcon">
+                                <ul class="clearfix">
+                                    <li><a href=""><img src="./images/subIcon01.png" alt="">국제교류<br>센터</a></li>
+                                    <li><a href=""><img src="./images/subIcon02.png" alt="">원격지원<br>시스템</a></li>
+                                    <li><a href=""><img src="./images/subIcon03.png" alt="">예산 / 결산<br>공고</a></li>
+                                </ul>
+                            </div>
                         </div>
                     </li>
-                    <li><a href=""><img src="" alt=""></a></li>
+                    <li>
+                        <div class="Txt03">
+                            <p>공지사항</p>
+                            <div class="info">
+                                <ul>
+                                    <li><div class="clrcle"></div>[공지]고려대학교 웹진... <span>2022-06-10</span></li>
+                                    <li><div class="clrcle"></div>[보도]우수대학교 선정 수상 <span>2022-06-10</span></li>
+                                    <li><div class="clrcle"></div>[공지]대학입시 설명회 <span>2022-06-10</span></li>
+                                    <li><div class="clrcle"></div>[공지]2022년 1학기 성적 <span>2022-06-10</span></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </li>
                     <li><a href=""><img src="" alt=""></a></li>
                     <li><a href=""><img src="" alt=""></a></li>
                     <li><a href=""><img src="" alt=""></a></li>
