--- a/04college/index.html
+++ b/04college/index.html
@@ -10,10 +10,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap"    rel="stylesheet">
-    <link rel="stylesheet" href="../css/jquery.bxslider.css">
-    <script src="../js/jquery-3.1.1.min.js"></script>
-    <script src="../js/jquery.bxslider.js"></script>
+    <link rel="stylesheet" href="./css/jquery.bxslider.css">
+    <link rel="stylesheet" href="./css/colorbox.css">
+    <script src="./js/jquery-3.1.1.min.js"></script>
+    <script src="./js/jquery.bxslider.js"></script>
+    <script src="./js/jquery.colorbox-min.js"></script>
+    <script src="./js/script.js"></script>
     <style>
+       
+       
         .bx-wrapper {
             -webkit-box-shadow: 0 0 0px #ccc;
             box-shadow: 0 0 0px #ccc;
@@ -54,21 +59,21 @@
             <div class="headerTop">
                 <nav class="navbarMenu1">
                     <ul class="clearfix">
-                        <li><a href="">대학교</a></li>
-                        <li><a href="">입학안내</a></li>
-                        <li><a href="">대학원</a></li>
+                        <li><a href="#">대학교</a></li>
+                        <li><a href="#">입학안내</a></li>
+                        <li><a href="#">대학원</a></li>
                     </ul>
                 </nav>
                 <nav class="navbarMenu2 clearfix">
                     <ul class="clearfix">
-                        <li><a href="">글자크기</a></li>
+                        <li><a href="#">글자크기</a></li>
                         <li>
-                            <p><a href="">-</a></p>
-                            <p><a href="">+</a></p>
+                            <p><a href="#">-</a></p>
+                            <p><a href="#">+</a></p>
                         </li>
-                        <li><a href="">찾아오시는길</a></li>
-                        <li><a href="">ENGLISH</a></li>
-                        <li><a href="">사이트맵</a></li>
+                        <li><a href="#">찾아오시는길</a></li>
+                        <li><a href="#">ENGLISH</a></li>
+                        <li><a href="#">사이트맵</a></li>
                     </ul>
                 </nav>
             </div>
@@ -76,16 +81,16 @@
         <div class="titleWrap">
             <div class="title">
                 <div class="titleLogo">
-                    <h1><a href=""><img src="./images/mainlogo.gif" alt=""></a></h1>
+                    <h1><a href="#"><img src="./images/mainlogo.gif" alt=""></a></h1>
                 </div>
                 <div class="titleMenu">
                     <ul class="clearfix">
-                        <li><a href="">대학소개</a></li>
-                        <li><a href="">학과소개</a></li>
-                        <li><a href="">학사안내</a></li>
-                        <li><a href="">대학생활</a></li>
-                        <li><a href="">학생지원센터</a></li>
-                        <li><a href=""></a></li>
+                        <li><a href="#">대학소개</a></li>
+                        <li><a href="#">학과소개</a></li>
+                        <li><a href="#">학사안내</a></li>
+                        <li><a href="#">대학생활</a></li>
+                        <li><a href="#">학생지원센터</a></li>
+                        <li><a href="#"></a></li>
                     </ul>
                 </div>
             </div>
@@ -98,10 +103,10 @@
                 <h2>창의적 미래 인재를 양성하고<br><span>세계를 변화시키는 고려대학교</span></h2>
                 <div class="Icon">
                     <ul class="clearfix">
-                        <li><a href=""><img src="./images/ICON01.png" alt="">입학절차안내</a></li>
-                        <li><a href=""><img src="./images/ICON02.png" alt="">입학설명회</a></li>
-                        <li><a href=""><img src="./images/ICON03.png" alt="">장학제도</a></li>
-                        <li><a href=""><img src="./images/ICON04.png" alt="">증명서발급</a></li>
+                        <li><a href="#"><img src="./images/ICON01.png" alt="">입학절차안내</a></li>
+                        <li><a href="#"><img src="./images/ICON02.png" alt="">입학설명회</a></li>
+                        <li><a href="#"><img src="./images/ICON03.png" alt="">장학제도</a></li>
+                        <li><a href="#"><img src="./images/ICON04.png" alt="">증명서발급</a></li>
                     </ul>
                 </div>
             </section>
@@ -112,28 +117,28 @@
                             <li>
                                 <div class="slide1_box">
                                     <h3><span>고려</span>에서<br><span>시작</span>하는<br>새로운 <span>꿈</span></h3>
-                                    <button class="bt01"><a href="">자세히보기 ></a></button>
+                                    <button class="bt01"><a href="#">자세히보기 ></a></button>
                                 </div>
                                 <img src="./images/sec01_Bg01.png" alt="">
                             </li>
                             <li>
                                 <div class="slide1_box">
                                     <h3><span>고려</span>에서<br><span>시작</span>하는<br>새로운 <span>꿈</span></h3>
-                                    <button class="bt01"><a href="">자세히보기 ></a></button>
+                                    <button class="bt01"><a href="#">자세히보기 ></a></button>
                                 </div>
                                 <img src="./images/sec01_Bg02.png" alt="">
                             </li>
                             <li>
                                 <div class="slide1_box">
                                     <h3><span>고려</span>에서<br><span>시작</span>하는<br>새로운 <span>꿈</span></h3>
-                                    <button class="bt01"><a href="">자세히보기 ></a></button>
+                                    <button class="bt01"><a href="#">자세히보기 ></a></button>
                                 </div>
                                 <img src="./images/sec01_Bg03.png" alt="">
                             </li>
                             <li>
                                 <div class="slide1_box">
                                     <h3><span>고려</span>에서<br><span>시작</span>하는<br>새로운 <span>꿈</span></h3>
-                                    <button class="bt01"><a href="">자세히보기 ></a></button>
+                                    <button class="bt01"><a href="#">자세히보기 ></a></button>
                                 </div>
                                 <img src="./images/sec01_Bg04.png" alt="">
                             </li>
@@ -143,7 +148,7 @@
                         <div class="Txt01">
                             <h4><span>APP</span>으로<br><span>스마트 도서관</span><br>바로이용하자!</h4>
                             <p>모바일 열람증은<br>도서관 자료실 / 도서대출 등에<br>사용 할 수 있습니다.</p>
-                            <button class="bt02"><a href="">자세히보기 ></a></button>
+                            <button class="bt02"><a href="#">자세히보기 ></a></button>
                         </div>
                     </li>
                     <li>
@@ -151,9 +156,9 @@
                             <p>HOTLINK</p>
                             <div class="subIcon">
                                 <ul class="clearfix">
-                                    <li><a href=""><img src="./images/subIcon01.png" alt="">국제교류<br>센터</a></li>
-                                    <li><a href=""><img src="./images/subIcon02.png" alt="">원격지원<br>시스템</a></li>
-                                    <li><a href=""><img src="./images/subIcon03.png" alt="">예산 / 결산<br>공고</a></li>
+                                    <li><a href="#"><img src="./images/subIcon01.png" alt="">국제교류<br>센터</a></li>
+                                    <li><a href="#"><img src="./images/subIcon02.png" alt="">원격지원<br>시스템</a></li>
+                                    <li><a href="#"><img src="./images/subIcon03.png" alt="">예산 / 결산<br>공고</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -181,16 +186,16 @@
                                 </div>
                                 <ul class="linkIcon">
                                     <li>
-                                        <a href=""><img src="./images/페이스북.png" alt=""></a>
+                                        <a href="#"><img src="./images/페이스북.png" alt=""></a>
                                     </li>
                                     <li>
-                                        <a href=""><img src="./images/트위터1.png" alt=""></a>
+                                        <a href="#"><img src="./images/트위터1.png" alt=""></a>
                                     </li>
                                     <li>
-                                        <a href=""><img src="./images/구글.png" alt=""></a>
+                                        <a href="#"><img src="./images/구글.png" alt=""></a>
                                     </li>
                                     <li>
-                                        <a href=""><img src="./images/유튜브2.png" alt=""></a>
+                                        <a href="#"><img src="./images/유튜브2.png" alt=""></a>
                                     </li>
                                 </ul>
                         </div>
@@ -198,7 +203,7 @@
                     <li>
                         <a href="">캠퍼스투어</a>
                     </li>
-                    <li></li>
+                    <li><a href="https://www.youtube.com/embed/e8nQ9ZwGi08"class="youtube"><img src="./images/image.png" alt=""></a></li>
                     <li class="slide2Wrap">
                         <ul class="slide2">
                             <li>
@@ -246,6 +251,22 @@
                 </ul>
             </section>
         </div>
+        <footer>
+            <div class="footerWrap">
+                <img src="./images/ftlogo.gif" alt="">
+                <div class="txtWrap">
+                    <ul>
+                        <li><a href="">회사소개</a></li>
+                        <li><a href="">한국대학교</a></li>
+                        <li><a href="">개인정보취급방침</a></li>
+                        <li><a href="">이용정책</a></li>
+                        <li><a href="">입점/제휴문의 및 광고</a></li>
+                        <li><a href="">이메일 무단수집거부</a></li>
+                    </ul>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam nisi odit temporibus cupiditate porro totam voluptate a dolores, in harum doloremque adipisci. Rerum quidem nulla dignissimos tenetur eaque cumque dolores!</p>
+                </div>
+            </div>
+        </footer>
     </div>
 </body>
 </html>
