--- a/04college/index.html
+++ b/04college/index.html
@@ -97,6 +97,7 @@
         </div>
     </header>
     <div class="visualBg">
+        <img src="./images/patton.png" alt="">
         <div class="contentWrap">
             <section class="sec01 clearfix">
                 <h2>창의적 미래 인재를 양성하고<br><span>세계를 변화시키는 고려대학교</span></h2>
