--- a/05himedia_tour/index.html
+++ b/05himedia_tour/index.html
@@ -73,7 +73,7 @@
                 <div class="slide01">
                     <ul class="slide">
                         <li class="a">
-                            hgfjhkljhklfjhklfg
+                            <p>프랑스<span>&#8361 1,923,000 ~</span></p>
                         </li>
                         <li class="b">
                            5555asdasdadsasas
