--- a/06company/index.html
+++ b/06company/index.html
@@ -95,10 +95,15 @@
     </div> -->
     </header>
 
-    <!-- <div class="visualWrap">
-        slide
+    <div class="visualWrap">
+        <ul class="slideWpra">
+            <li class="slide"style="background-image: url(./images/header_bg1.png);"></li>
+            <li class="slide"style="background-image: url(./images/header_bg2.jpg);"></li>
+            <li class="slide"style="background-image: url(./images/header_bg3.jpg);"></li>
+            <li class="slide"style="background-image: url(./images/header_bg4.png);"></li>
+        </ul>
     </div>
-    <section style="height: 1000px;"></section> -->
+    <section style="height: 1000px;"></section>
     <script src="js/script.js"></script>
 </body>
 
