--- a/06company/index01.html
+++ b/06company/index01.html
@@ -7,7 +7,7 @@
     <title>index</title>
     <link rel="stylesheet" href="css/jquery.bxslider.css">
     <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style01.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="js/jquery.bxslider.js"></script>
@@ -206,6 +206,6 @@
     </section>
 
     
-<script src="js/script.js"></script>
+<script src="js/script01.js"></script>
 </body>
 </html>
