--- a/06company/index01.html
+++ b/06company/index01.html
@@ -29,7 +29,7 @@
 </head>
 <body>
     <header id="header">
-        <div class="navbarWrap container">
+        <div class="navbarWrap">
             <h1><a href="#">LOGO</a></h1>
             <nav class="navbar">
                 <ul>
@@ -203,7 +203,7 @@
                   </div>
             </li>
         </ul>
-    </section>
+    </section class="container">
 
     
 <script src="js/script01.js"></script>
