--- a/06company/index.html
+++ b/06company/index.html
@@ -27,55 +27,49 @@
                     <li>
                         <a href="">NOW</a>
                         <ul class="submenu">
-                            <li><a href="#">sub01_01</a></li>
-                            <li><a href="#">sub01_02</a></li>
-                            <li><a href="#">sub01_03</a></li>
-                            <li><a href="#">sub01_04</a></li>
+                            <li><a href="#">LATEST</a></li>
+                            <li><a href="#">보도자료</a></li>
+                            <li><a href="#">공지사항</a></li>
                         </ul>
                     </li>
                     <li>
                         <a href="">사업소개</a>
                         <ul class="submenu">
-                            <li><a href="#">sub01_01</a></li>
-                            <li><a href="#">sub01_02</a></li>
-                            <li><a href="#">sub01_03</a></li>
-                            <li><a href="#">sub01_04</a></li>
+                            <li><a href="#">ONE-STOP 물류솔루션</a></li>
+                            <li><a href="#">TES</a></li>
                         </ul>
                     </li>
                     <li>
                         <a href="">글로벌네트워크</a>
                         <ul class="submenu">
-                            <li><a href="#">sub01_01</a></li>
-                            <li><a href="#">sub01_02</a></li>
-                            <li><a href="#">sub01_03</a></li>
-                            <li><a href="#">sub01_04</a></li>
+                            <li><a href="#">글로벌 현황</a></li>
+                            <li><a href="#">Global Family</a></li>
                         </ul>
                     </li>
                     <li>
                         <a href="">회사정보</a>
                         <ul class="submenu">
-                            <li><a href="#">sub01_01</a></li>
-                            <li><a href="#">sub01_02</a></li>
-                            <li><a href="#">sub01_03</a></li>
-                            <li><a href="#">sub01_04</a></li>
+                            <li><a href="#">회사소개</a></li>
+                            <li><a href="#">라이브러리</a></li>
+                            <li><a href="#">스폰서십</a></li>
+                            <li><a href="#">투자정보</a></li>
                         </ul>
                     </li>
                     <li>
                         <a href="">지속가능경영</a>
                         <ul class="submenu">
-                            <li><a href="#">sub01_01</a></li>
-                            <li><a href="#">sub01_02</a></li>
-                            <li><a href="#">sub01_03</a></li>
-                            <li><a href="#">sub01_04</a></li>
+                            <li><a href="#">지속가능경영</a></li>
+                            <li><a href="#">사회공헌</a></li>
+                            <li><a href="#">윤리경영</a></li>
                         </ul>
                     </li>
                     <li>
                         <a href="">고객지원</a>
                         <ul class="submenu">
-                            <li><a href="#">sub01_01</a></li>
-                            <li><a href="#">sub01_02</a></li>
-                            <li><a href="#">sub01_03</a></li>
-                            <li><a href="#">sub01_04</a></li>
+                            <li><a href="#">사업별문의처</a></li>
+                            <li><a href="#">자주 묻는 질문</a></li>
+                            <li><a href="#">1:1 문의</a></li>
+                            <li><a href="#">택배 조회</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -99,9 +93,30 @@
 
         <div class="overlay"></div>
         <div class="navbarClone">
-            <div class="mMenu"></div>
+            <div class="mMenu">
+                <div class="mHeader">
+                    <div class="mHeaderWrap">
+                        <div class="mLogo">
+                            <a href=""></a>
+                        </div>
+                        <div class="mIcon">
+                            <div class="mLeng"><a href="">KO<i class="fa-solid fa-angle-down"></i></a></div>
+                            <div class="mClose"></div>
+                        </div>
+                    </div>
+                    <div class="mSrWrap">
+                        <input class="mInp" type="text"placeholder="검색어를 입력하세요">
+                        <div class="msrIcon"></div>
+                    </div>
+                </div>
+            </div>
         </div>
     </header>
+
+
+
+
+
 
     <div class="visualWrap">
         <ul class="slideWrap">
@@ -159,13 +174,13 @@
     </section>
     <section class="contents2">
         <div class="videoWrap">
-            <video width="1320" autoplay loop src="./images/main_1122.mp4"></video>
+            <video width="1320" autoplay muted loop src="./images/main_1122.mp4"></video>
             <ul>
                 <div class="info_txt">
                     <h3>사업소개</h3>
                     <p>핵심 사업을 기반으로 고객에 최전화된 One-Stop 물류솔루션을 제공합니다</p>
                 </div>
-                <li>
+                <li class="click">
                     <div class="iconWrap">
                         <div class="conIcon"></div>
                         <h4>이커머스 물류</h4>
