--- a/06company/index.html
+++ b/06company/index.html
@@ -24,29 +24,29 @@
             <h1><a href=""></a></h1>
             <nav class="navbar01">
                 <ul>
-                    <li>
+                    <li class="mbSub">
                         <a href="">NOW</a>
                         <ul class="submenu">
+                        </li>
                             <li><a href="#">LATEST</a></li>
                             <li><a href="#">보도자료</a></li>
                             <li><a href="#">공지사항</a></li>
                         </ul>
-                    </li>
-                    <li>
+                    <li class="mbSub">
                         <a href="">사업소개</a>
                         <ul class="submenu">
                             <li><a href="#">ONE-STOP 물류솔루션</a></li>
                             <li><a href="#">TES</a></li>
                         </ul>
                     </li>
-                    <li>
+                    <li class="mbSub">
                         <a href="">글로벌네트워크</a>
                         <ul class="submenu">
                             <li><a href="#">글로벌 현황</a></li>
                             <li><a href="#">Global Family</a></li>
                         </ul>
                     </li>
-                    <li>
+                    <li class="mbSub">
                         <a href="">회사정보</a>
                         <ul class="submenu">
                             <li><a href="#">회사소개</a></li>
@@ -55,7 +55,7 @@
                             <li><a href="#">투자정보</a></li>
                         </ul>
                     </li>
-                    <li>
+                    <li class="mbSub">
                         <a href="">지속가능경영</a>
                         <ul class="submenu">
                             <li><a href="#">지속가능경영</a></li>
@@ -63,7 +63,7 @@
                             <li><a href="#">윤리경영</a></li>
                         </ul>
                     </li>
-                    <li>
+                    <li class="mbSub">
                         <a href="">고객지원</a>
                         <ul class="submenu">
                             <li><a href="#">사업별문의처</a></li>
